--- a/.github/workflows/dbt_repo_activity_core_weekly.yml
+++ b/.github/workflows/dbt_repo_activity_core_weekly.yml
@@ -43,3 +43,10 @@ jobs:
           dbt run-operation get_github_repo_data --args "{GITHUB_TOKEN: 'TOKEN', frequency: ['core']}"
           dbt run -m "crosschain_models,tag:github_activity"
           dbt test -s github_data_null
+    
+  notify-failure:
+    needs: [dbt]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
