--- a/.github/workflows/dbt_run_dev_refresh.yml
+++ b/.github/workflows/dbt_run_dev_refresh.yml
@@ -42,6 +42,13 @@ jobs:
         run: |
           dbt run-operation run_sp_create_prod_clone
 
+  notify-failure:
+    needs: [run_dbt_jobs_refresh]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
   run_dbt_jobs_udfs:
     runs-on: ubuntu-latest
     needs: run_dbt_jobs_refresh
@@ -64,3 +71,10 @@ jobs:
         run: |
           dbt run-operation fsc_utils.create_udf_bulk_rest_api_v2 --vars '{"UPDATE_UDFS_AND_SPS":True}' -t dev
           dbt run -s livequery_models.deploy.core._live --vars '{"UPDATE_UDFS_AND_SPS":True}' -t dev
+
+  notify-failure-2:
+    needs: [run_dbt_jobs_udfs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
