--- a/.github/workflows/dbt_run_heal_models.yml
+++ b/.github/workflows/dbt_run_heal_models.yml
@@ -45,3 +45,10 @@ jobs:
       - name: Run DBT Jobs
         run: |
           dbt run -m "crosschain_models,tag:heal" --vars '{"HEAL_MODEL":True}'
+
+  notify-failure:
+    needs: [run_dbt_jobs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
