--- a/.github/workflows/dbt_run_scheduled_daily.yml
+++ b/.github/workflows/dbt_run_scheduled_daily.yml
@@ -43,3 +43,10 @@ jobs:
       - name: Run DBT Jobs
         run: |
           dbt run -m "crosschain_models,tag:daily"
+
+  notify-failure:
+    needs: [run_dbt_jobs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
