--- a/.github/workflows/dbt_run_scheduled_weekly.yml
+++ b/.github/workflows/dbt_run_scheduled_weekly.yml
@@ -44,3 +44,10 @@ jobs:
         run: |
           dbt run -m "crosschain_models,tag:weekly"
           dbt run -m "crosschain_models,tag:weekly_full_refresh" --full-refresh
+
+  notify-failure:
+    needs: [run_dbt_jobs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
