--- a/.github/workflows/dbt_run_streamline_asset_metadata.yml
+++ b/.github/workflows/dbt_run_streamline_asset_metadata.yml
@@ -45,3 +45,10 @@ jobs:
       - name: Run DBT Jobs
         run: |
           dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_cmc_asset_metadata" "crosschain_models,tag:streamline_cg_asset_metadata"
+
+  notify-failure:
+    needs: [run_dbt_jobs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
