--- a/.github/workflows/dbt_run_streamline_prices_realtime.yml
+++ b/.github/workflows/dbt_run_streamline_prices_realtime.yml
@@ -45,3 +45,10 @@ jobs:
       - name: Run DBT Jobs
         run: |
           dbt run --vars '{"STREAMLINE_INVOKE_STREAMS":True}' -m "crosschain_models,tag:streamline_cmc_prices_complete" "crosschain_models,tag:streamline_cmc_prices_realtime" "crosschain_models,tag:streamline_cg_prices_realtime"
+
+  notify-failure:
+    needs: [run_dbt_jobs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
