--- a/models/sources.yml
+++ b/models/sources.yml
@@ -427,6 +427,7 @@ sources:
       - name: asset_metadata_coin_gecko_api_v2
       - name: asset_metadata_coin_market_cap_api_v2
       - name: asset_ohlc_coin_market_cap_api_v2
+      - name: unifai_swap_txs
   - name: bronze
     database: crosschain
     schema: bronze
