--- a/.github/workflows/dbt_test_daily.yml
+++ b/.github/workflows/dbt_test_daily.yml
@@ -43,3 +43,9 @@ jobs:
         run: |
           dbt test --exclude "crosschain_models,tag:gha_tasks" livequery_models
           
+  notify-failure:
+    needs: [run_dbt_jobs]
+    if: failure()
+    uses: ./.github/workflows/slack_notify.yml
+    secrets:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
