--- a/models/sources.yml
+++ b/models/sources.yml
@@ -697,6 +697,11 @@ sources:
     schema: silver
     tables:
       - name: polymarket_markets
+  - name: external_defillama
+    database: external
+    schema: defillama
+    tables:
+      - name: fact_dex_volume
 
   #=============================================================================
   # FLOW
