--- a/.github/workflows/dbt_test_metrics_weekly.yml
+++ b/.github/workflows/dbt_test_metrics_weekly.yml
@@ -4,7 +4,7 @@ run-name: dbt_test_daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 4 * * *'
+    - cron: '0 14 * * 1'
     
 env:
   DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
