--- a/.github/workflows/dbt_test_metrics_weekly.yml
+++ b/.github/workflows/dbt_test_metrics_weekly.yml
@@ -1,5 +1,5 @@
-name: dbt_test_daily
-run-name: dbt_test_daily
+name: dbt_test_metrics_weekly
+run-name: dbt_test_metrics_weekly
 
 on:
   workflow_dispatch:
