update inc and yml

--- a/models/silver/core/silver__transfers_summary.yml
+++ b/models/silver/core/silver__transfers_summary.yml
@@ -7,9 +7,9 @@ models:
           combination_of_columns:
             - ADDRESS
             - BLOCKCHAIN
-            - DAY_
+            - BLOCK_DAY
     columns:
-      - name: DAY_
+      - name: BLOCK_DAY
         tests:
           - not_null
 
