--- a/models/silver/core/silver__transfers_summary.yml
+++ b/models/silver/core/silver__transfers_summary.yml
@@ -12,6 +12,9 @@ models:
       - name: BLOCK_DAY
         tests:
           - not_null
+          - dbt_expectations.expect_row_values_to_have_recent_data:
+              datepart: day
+              interval: 1
 
       - name: ADDRESS
         tests:
