AN-6016/create-daily-token-transfer-summary (#453)
* add transfers model

* add transfer table to sources

* add incremental

* update summary table

* update alias

* remove transfer summary

* remove amount test

* update to jan 1

* remove silver transfers

* update inc to snapshot method

* update inc and yml

* remove thresholds

* remove comments

* SO and add rec test

* push back rec test, add not null filter

* set to prod default date

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -9,6 +9,7 @@ sources:
     schema: core
     tables:
       - name: dim_token_registrations
+      - name: fact_transfers
 
   - name: aleo_observ
     database: aleo
@@ -379,6 +380,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: ez_token_transfers
 
   - name: bob_silver
     database: bob
@@ -395,6 +397,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: ez_token_transfers
 
   - name: boba_silver
     database: boba
@@ -506,6 +509,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: ez_token_transfers
 
   - name: core_silver
     database: core
@@ -646,6 +650,7 @@ sources:
       - name: contracts
       - name: complete_event_abis
       - name: blocks
+      - name: transfers
 
   - name: ethereum_silver_dex
     database: ethereum
@@ -719,6 +724,7 @@ sources:
     schema: core_evm
     tables:
       - name: dim_contracts
+      - name: ez_token_transfers
 
   - name: flow_observ
     database: flow
@@ -794,6 +800,7 @@ sources:
       - name: contracts
       - name: traces
       - name: blocks
+    
 
   - name: gnosis_silver_dex
     database: gnosis
@@ -830,7 +837,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
-
+      - name: ez_token_transfers
   - name: ink_silver
     database: ink
     schema: silver
@@ -1271,7 +1278,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
-
+      - name: ez_token_transfers
   - name: swell_silver
     database: swell
     schema: silver
@@ -1311,7 +1318,6 @@ sources:
     tables:
       - name: fact_swaps
       - name: fact_liquidity_actions
-
   #=============================================================================
   # TON
   #=============================================================================
