--- a/models/silver/ai_metrics/defillama_comparison/silver_metrics__chain_overview.yml
+++ b/models/silver/ai_metrics/defillama_comparison/silver_metrics__chain_overview.yml
@@ -36,6 +36,6 @@ models:
       - name: CHAIN_OVERVIEW_ID 
         tests:
           - not_null
-      - name: INVOCATION_ID 
+      - name: _INVOCATION_ID 
         tests:
           - not_null
