--- a/models/silver/ai_metrics/defillama_comparison/silver_metrics__dex_comparison.yml
+++ b/models/silver/ai_metrics/defillama_comparison/silver_metrics__dex_comparison.yml
@@ -33,6 +33,6 @@ models:
       - name: DEX_COMPARISON_ID 
         tests:
           - not_null
-      - name: INVOCATION_ID 
+      - name: _INVOCATION_ID 
         tests:
           - not_null
