--- a/models/sources.yml
+++ b/models/sources.yml
@@ -702,6 +702,7 @@ sources:
     schema: defillama
     tables:
       - name: fact_dex_volume
+      - name: fact_bridge_volume_by_chain
 
   #=============================================================================
   # FLOW
