An 6028/testing-metrics-dex (#454)
* add comparison model

* add tests

* cron

* test name

* fix set

* add yml

* add overview metrics

* fix

* add bridge and overview comparison

* fix join and recency

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -702,6 +702,12 @@ sources:
     schema: silver
     tables:
       - name: polymarket_markets
+  - name: external_defillama
+    database: external
+    schema: defillama
+    tables:
+      - name: fact_dex_volume
+      - name: fact_bridge_volume_by_chain
 
   #=============================================================================
   # FLOW
