move to silver, add to sources, update inc

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -703,6 +703,12 @@ sources:
     tables:
       - name: polymarket_markets
 
+  - name: external_defillama
+    database: external
+    schema: defillama
+    tables:
+      - name: dim_protocols
+
   #=============================================================================
   # FLOW
   #=============================================================================
@@ -1326,3 +1332,4 @@ sources:
     schema: core
     tables:
       - name: fact_jetton_metadata
+
