--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1263,6 +1263,7 @@ sources:
     schema: core
     tables:
       - name: dim_assets
+      - name: fact_operations
 
   - name: stellar_stats
     database: stellar
@@ -1325,4 +1326,5 @@ sources:
     database: ton
     schema: core
     tables:
+      - name: fact_jetton_events
       - name: fact_jetton_metadata
