--- a/models/silver/ai_metrics/defillama_comparison/silver_metrics__dex_comparison.yml
+++ b/models/silver/ai_metrics/defillama_comparison/silver_metrics__dex_comparison.yml
@@ -16,7 +16,7 @@ models:
           - dbt_expectations.expect_column_values_to_be_between:
               min_value: 0
               max_value: 9.99
-              severity: error
+              severity: warn
               where: "inserted_timestamp >= systimestamp() - interval '24 hours'"
       - name: INSERTED_TIMESTAMP
         tests:
