AN-6027 stats activity table (#456)
* build stats activity table

* .

* sei address mapping and more performance upgrades

* final performance updates

* evms

* clean up

* edge case for null dates

* add metrics_daily workflow at 6am UTC

* columns descriptions overview

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -10,6 +10,7 @@ sources:
     tables:
       - name: dim_token_registrations
       - name: fact_transfers
+      - name: fact_transactions
 
   - name: aleo_observ
     database: aleo
@@ -43,6 +44,7 @@ sources:
     schema: core
     tables:
       - name: dim_tokens
+      - name: fact_transactions
       - name: fact_transfers
       - name: ez_native_transfers
 
@@ -380,6 +382,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: fact_transactions
       - name: ez_token_transfers
 
   - name: bob_silver
@@ -397,6 +400,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: fact_transactions
       - name: ez_token_transfers
 
   - name: boba_silver
@@ -509,6 +513,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: fact_transactions      
       - name: ez_token_transfers
 
   - name: core_silver
@@ -577,13 +582,29 @@ sources:
       - name: uniswap_verified_token_tags
 
   #=============================================================================
+  # DATASCIENCE
+  #=============================================================================
+  - name: datascience_onchain_scores
+    database: datascience
+    schema: onchain_scores
+    tables:
+      - name: all_scores
+
+  #=============================================================================
   # ECLIPSE
   #=============================================================================
   - name: eclipse_core
     database: eclipse
     schema: core
     tables:
+      - name: fact_transactions
       - name: fact_transfers
+
+  - name: eclipse_gov
+    database: eclipse
+    schema: gov
+    tables:
+      - name: fact_votes
 
   - name: eclipse_stats
     database: eclipse
@@ -716,6 +737,8 @@ sources:
     database: flow
     schema: core
     tables:
+      - name: fact_transactions
+      - name: fact_events
       - name: ez_token_transfers
 
   - name: flow_defi
@@ -730,6 +753,7 @@ sources:
     schema: core_evm
     tables:
       - name: dim_contracts
+      - name: fact_transactions
       - name: ez_token_transfers
 
   - name: flow_observ
@@ -843,6 +867,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: fact_transactions
       - name: ez_token_transfers
   - name: ink_silver
     database: ink
@@ -935,6 +960,7 @@ sources:
     database: maya
     schema: core
     tables:
+      - name: fact_transactions
       - name: fact_transfers
 
   #=============================================================================
@@ -947,6 +973,8 @@ sources:
       - name: ez_token_transfers
       - name: ez_dex_swaps
       - name: dim_ft_contract_metadata
+      - name: fact_transactions
+      
 
   - name: near_defi
     database: near
@@ -1180,6 +1208,8 @@ sources:
     tables:
       - name: fact_msg_attributes
       - name: dim_tokens
+      - name: fact_transactions
+      - name: dim_address_mapping
 
   - name: sei_evm_core
     database: sei
@@ -1220,6 +1250,7 @@ sources:
     database: solana
     schema: core
     tables:
+      - name: fact_transactions
       - name: fact_transfers
       - name: dim_tokens
 
@@ -1261,6 +1292,7 @@ sources:
     tables:
       - name: ez_core_metrics_hourly
 
+
   #=============================================================================
   # STELLAR
   #=============================================================================
@@ -1269,6 +1301,7 @@ sources:
     schema: core
     tables:
       - name: dim_assets
+      - name: fact_transactions
 
   - name: stellar_stats
     database: stellar
@@ -1284,6 +1317,7 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+      - name: fact_transactions
       - name: ez_token_transfers
   - name: swell_silver
     database: swell
@@ -1315,6 +1349,7 @@ sources:
     database: thorchain
     schema: core
     tables:
+      - name: fact_transactions
       - name: fact_transfers
       - name: dim_block
 
@@ -1332,3 +1367,4 @@ sources:
     schema: core
     tables:
       - name: fact_jetton_metadata
+      - name: fact_transactions
