--- a/models/sources.yml
+++ b/models/sources.yml
@@ -708,6 +708,11 @@ sources:
     tables:
       - name: fact_dex_volume
       - name: fact_bridge_volume_by_chain
+  - name: external_tokenlists
+    database: external
+    schema: tokenlists
+    tables:
+      - name: ez_verified_tokens
 
   #=============================================================================
   # FLOW
