--- a/.github/workflows/dbt_test_daily.yml
+++ b/.github/workflows/dbt_test_daily.yml
@@ -41,7 +41,7 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt test --exclude "crosschain_models,tag:gha_tasks" "crosschain_models,tag:ai_metrics" livequery_models
+          dbt test --exclude "crosschain_models,tag:gha_tasks" "crosschain_models,tag:ai_metrics" livequery_models "crosschain_models,tag:metrics_daily" 
           
   notify-failure:
     needs: [run_dbt_jobs]
